--- a/.env
+++ b/.env
@@ -1,20 +1,21 @@
 # Flask Configuration
+# Flask Configuration
 FLASK_APP=app.py
 FLASK_ENV=production
-SECRET_KEY=your-secret-key-here  # Replace with a strong, random string
+SECRET_KEY=your-very-strong-secret-key   # Replace with a secure random key
 
 # AWS Configuration
-AWS_REGION=your-aws-region           # e.g., us-east-1
-SNS_TOPIC_ARN=arn:aws:sns:your-region:account-id:your-topic-name
+AWS_REGION=us-east-1                     # Replace with your actual region
+SNS_TOPIC_ARN=arn:aws:sns:us-east-1:123456789012:MedtrackNotifications
 
-# DynamoDB Table Names (or RDS depending on your app)
+# DynamoDB Table Names
 USERS_TABLE=HealthcareUsers
 APPOINTMENTS_TABLE=HealthcareAppointments
 PRESCRIPTIONS_TABLE=HealthcarePrescriptions
 
-# SMTP Configuration (Gmail or your provider)
-SMTP_SERVER=smtp.gmail.com           # Or your SMTP server
+# SMTP (Email) Configuration
+SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=your-email@example.com  # e.g., no-reply@yourdomain.com
-SMTP_PASSWORD=your-email-password     # Use an app password if Gmail
+SMTP_USERNAME=no-reply@yourdomain.com     # Your sending email
+SMTP_PASSWORD=your-app-password           # Gmail App Password (not main password)
 SENDER_EMAIL=no-reply@yourdomain.com
