--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=no-reply@yourdomain.com     # Your sending email
 SMTP_PASSWORD=your-app-password           # Gmail App Password (not main password)
-SENDER_EMAIL=no-reply@yourdomain.com
+SENDER_EMAIL=ganeshkumar63@gmail.com
